Fix textarea not sizing down on smaller screen

--- a/css/default.css
+++ b/css/default.css
@@ -313,6 +313,7 @@ main {
 	color: var(--color-neutral-dark-blue);
 	border-radius: 8px;
 	padding: 0.7em 1em;
+	width: 100%;
 }
 
 .reply-text::placeholder {
